<resources>
    <string name="app_name">Моя домашняя библиотека</string>
    <string name="title_home">Мои книги</string>
    <string name="title_favorites">Избранное</string>
    <string name="title_settings">Настройки</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="add_new_book_button">Добавить книгу</string>
    <string name="search_title">Поиск</string>
    <string name="book_image_description">Book image</string>
    <string name="make_book_favorite">В избранное</string>
    <string name="book_already_on_favorite">В избранном</string>
    <string name="book_review">Рецензия</string>
    <string name="delete_book_entry">Удалить запись</string>
    <string name="deleteButtonToast">Нажмите дважды чтобы удалить</string>
    <string name="favorite_description_book_item">favorite</string>
    <string name="floatin_button_description_book_activity">Изменить данные о книге</string>
    <string name="edit_text_description_book_activity">Напишите рецензию о книге, чтобы не забыть</string>
    <string name="edit_add_photo">Добавить фото</string>
    <string name="edit_book_name">Название книги</string>
    <string name="edit_book_author">Автор(-ы)</string>
    <string name="edit_year_publishing">Год издания</string>
    <string name="edit_place_publishing">Место издания</string>
    <string name="alertSettingsDialogMessage">Для снятия фото нужно предоставить права на доступ к камере</string>
    <string name="alertSettingsDialogTitle">Нужно предоставить права</string>
    <string name="alertSettingsDialogOK">OK</string>
</resources>