<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    tools:context=".ui.book.BookActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/floatin_button_description_book_activity"
        android:focusable="true"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_edit_24"
        app:tint="@color/colorOnPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal">-->

<!--                <View-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_weight="1" />-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/photoConstraintLayout"
                android:layout_width="225dp"
                android:layout_height="300dp"
                android:background="@color/colorPrimary">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_book_50"
                android:contentDescription="@string/book_image_description"/>
            <ImageView
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/book_image_description" />
            </androidx.constraintlayout.widget.ConstraintLayout>
<!--                <ImageView-->
<!--                    android:id="@+id/constraintLayout"-->
<!--                    android:layout_width="225dp"-->
<!--                    android:layout_height="300dp"-->
<!--                    android:scaleType="centerCrop"-->
<!--                    android:contentDescription="@string/book_image_description"-->
<!--                    tools:srcCompat="@tools:sample/avatars" />-->

<!--                <View-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_weight="1" />-->

<!--            </LinearLayout>-->

            <TextView
                android:id="@+id/nameTextView"
                style="@style/BookInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="Название книги" />

            <TextView
                android:id="@+id/authorTextView"
                style="@style/BookInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="Автор(-ы)" />

            <TextView
                android:id="@+id/infoTextView"
                style="@style/BookInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="Год издания" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/makeFavorite"
                    style="@style/CustomButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/transperent_color"
                    android:backgroundTint="#00FFFFFF"
                    android:drawableLeft="@drawable/baseline_favorite_24"
                    android:drawablePadding="4dp"
                    android:drawableTint="@color/colorPrimary"
                    android:text="@string/make_book_favorite"
                    android:textColor="@color/colorPrimary"
                    app:iconTint="#000000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:rippleColor="#00FFFFFF"
                    tools:ignore="RtlHardcoded" />

                <Button
                    android:id="@+id/alreadyFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#B79862"
                    android:text="@string/book_already_on_favorite"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                style="@style/BookInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/book_review" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp">

                <EditText
                    android:id="@+id/editTextTextMultiLine"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:autofillHints=""
                    android:background="@drawable/transperent_color"
                    android:gravity="top|start"
                    android:hint="@string/edit_text_description_book_activity"
                    android:inputType="textMultiLine"
                    android:lines="20"
                    android:padding="10dp"
                    android:scrollbars="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="118dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="118dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#F44336"
                android:text="@string/delete_book_entry"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_dashboard" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>